[gd_scene load_steps=7 format=3 uid="uid://cbyndtv70vpwv"]

[ext_resource type="Script" path="res://scenes/enemies/spawner/spawner.gd" id="1_48cu5"]
[ext_resource type="PackedScene" uid="uid://bel34pxwtixdf" path="res://scenes/skill building/Action Chain/ChainRoot.tscn" id="1_i2flb"]
[ext_resource type="PackedScene" uid="uid://dhv1n0nlkl1lf" path="res://scenes/skill building/Action Chain/Triggers/on timer/OnTimer.tscn" id="2_siasl"]
[ext_resource type="PackedScene" uid="uid://d2qi6c253udob" path="res://scenes/skill building/Action Chain/Event.tscn" id="3_fa0ee"]
[ext_resource type="PackedScene" uid="uid://bkvyfec6n64gc" path="res://scenes/enemies/Enemy.tscn" id="5_w6rpg"]
[ext_resource type="PackedScene" uid="uid://dw0v82tted8bd" path="res://scenes/skill building/Actions/Action Types/MultiActions/fire cone/FireCone.tscn" id="6_jnmgy"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_48cu5")
spawn_entity = ExtResource("5_w6rpg")
spread_distance = 100.0

[node name="ChainRoot" parent="." instance=ExtResource("1_i2flb")]

[node name="OnTimer" parent="ChainRoot" instance=ExtResource("2_siasl")]

[node name="Event" parent="ChainRoot/OnTimer" node_paths=PackedStringArray("action") instance=ExtResource("3_fa0ee")]
action = NodePath("FireCone")

[node name="FireCone" parent="ChainRoot/OnTimer/Event" instance=ExtResource("6_jnmgy")]
cone_angle = 360.0
ignore_rotation = true
head_start_distance = 10.0
num_emissions = 8
action_shape = ExtResource("5_w6rpg")
